# bananas

./: .gitmodules
.github/workflows/: build.yml
aruco/: .clang-tidy  CMakeLists.txt  README.md  boards.json  camera.json  running_with_jetson.md
aruco/apps/: CMakeLists.txt  gltf_exporter.cpp  positioner.cpp  ros_video_publisher.cpp
aruco/aruco_detector/: .clang-format  CMakeLists.txt  README.md
aruco/aruco_detector/apps/: CMakeLists.txt  npp_testing.cpp
aruco/aruco_detector/include/bananas_aruco_detector/: aruco_detector.hpp
aruco/aruco_detector/src/: CMakeLists.txt  aruco_detector.cpp  aruco_utils.cpp  aruco_utils.hpp
aruco/containers/aruco-base/: Dockerfile
aruco/containers/build-mavsdk/: Dockerfile
aruco/containers/build-ogre/: Dockerfile
aruco/containers/build-opencv/: Dockerfile
aruco/containers/build-opencv-cuda/: Dockerfile
aruco/containers/build-px4/: Dockerfile
aruco/gazebo/: CMakeLists.txt
aruco/gazebo/box_world/: CMakeLists.txt  boards.json  box_world.sdf  camera.json
aruco/gazebo/demo_world/: CMakeLists.txt  boards.json  camera.json  demo_world.sdf  static_environment.json
aruco/gazebo/drone_world/: CMakeLists.txt  boards.json  drone_world.sdf  static_environment.json
aruco/include/bananas_aruco/: affine_rotation.h  aruco_detector.h  concrete_board.h  mavlink.h  world.h
aruco/include/bananas_aruco/visualization/: visualizer.h
aruco/src/: CMakeLists.txt  affine_rotation.cpp  concrete_board.cpp  grid_board.cpp  mavlink.cpp  world.cpp
aruco/src/visualization/: CMakeLists.txt  visualizer.cpp
aruco/tests/: CMakeLists.txt  grid_board.cpp  mavlink.cpp
